--- a/Client/index.html
+++ b/Client/index.html
@@ -3,9 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon"  href="./public/img/favicon.52df53a.ico" />
+  <link rel="shortcut icon" href="/src/assets/images/favicon.52df53a.ico" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fiverr - Freelance Services Marketplace</title>
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+
 </head>
 
 <body>
